--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="theme-color" content="#00FF00" />
   <link rel="manifest" href="/manifest.json" />
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <!--<meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="PWAApple">
   <link rel="apple-touch-icon" href="assets/apple-icon-144x144.png" sizes="144x144">
@@ -19,7 +19,7 @@
   <link rel="apple-touch-icon" href="assets/apple-icon-76x76.png" sizes="76x76">
   <link rel="apple-touch-icon" href="assets/apple-icon-72x72.png" sizes="72x72">
   <link rel="apple-touch-icon" href="assets/apple-icon-60x60.png" sizes="60x60">
-  <link rel="apple-touch-icon" href="assets/apple-icon-57x57.png" sizes="57x57">
+  <link rel="apple-touch-icon" href="assets/apple-icon-57x57.png" sizes="57x57"> -->
   
 </head>
 <body>
