--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <link rel="apple-touch-icon" href="assets/apple-icon-72x72.png" sizes="72x72">
   <link rel="apple-touch-icon" href="assets/apple-icon-60x60.png" sizes="60x60">
   <link rel="apple-touch-icon" href="assets/apple-icon-57x57.png" sizes="57x57"> -->
-  <link rel="manifest" id="my-manifest-placeholder">
+  <link rel="manifest" type="application/json" id="my-manifest-placeholder">
   
 </head>
 <body>
